<resources>
    <string name="app_name">TodoList</string>
    <string name="title_todo_detail">Todo Detail</string>
    <string name="TAB_ACTIVE">Active</string>
    <string name="TAB_DONE">Done</string>

    <string name="create_new_todo">Create new TODO</string>
    <string name="create_todo_save_button_text">Save</string>
    <string name="create_todo_completed_checkbox_label">Done</string>
    <string name="create_todo_estimated_time_label">Estimated time</string>
    <string name="create_todo_start_time_label">Change start time</string>
    <string name="create_todo_change_position_button">Change position</string>
    <string name="create_todo_description_hint">Description</string>
    <string name="create_todo_enter_title">Title</string>
    <string name="create_todo_choose_place">Choose place</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_todo_start_time">Choose start time</string>
    <string name="display_todo_title_label">Title:</string>
    <string name="display_todo_description_label">Description:</string>
    <string name="display_todo_address_label">Address:</string>
    <string name="display_todo_weather_button_label">Show weather</string>
    <string name="display_todo_start_time_label">Start time:</string>
    <string name="display_todo_estimated_time_label">Estimated time:</string>
    <string name="display_todo_measured_time_label">Measured time:</string>
    <string name="display_todo_status_label">Status:</string>
    <string name="display_todo_floating_window_checkbox">Display floating window</string>
    <string name="display_todo_floating_window_checkbox_label">Show floating window:</string>
    <string name="done_text">Done</string>
    <string name="active_text">Active</string>
</resources>
